# wham

./: .gitattributes  LICENSE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  run_dreaming.py  run_server.py  setup_local.sh
configs/: metadata_custom_tag.config
models/: WHAM_1.6B_v1.ckpt  WHAM_200M.ckpt
wham/: dweam.toml  dweam_game.py  utils.py
wham/models/nn/: model_blocks.py  nanoGPT.py
wham/models/pl/: pl_base_model.py
wham/models/vqgan/: taming_vq_model.py  vqgan.py  vqgan_models.py
wham/models/vqgan/taming/: LICENSE  model.py  quantize.py
wham/models/vqvae/: vqvae_utils.py
wham/models/wham_base/: encode_predict_decode_base.py  encoder_decoder.py  pl_creation_args.py  predictor.py  tensor_spaces.py
wham/models/wham_token_model/: gpt_token_transformer_predictor.py  token_action_encoder.py  wham_token.py
wham_demonstrator/: README.md
wham_demonstrator/Examples/0_facility_map_sample/: actions.json
wham_demonstrator/Examples/0_wham-sample-junkyard/: actions.json
wham_demonstrator/Examples/0_wham-sample-landslide/: actions.json
