[tool.poetry]
name = "wham"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aiohttp = "^3.9.3"
aiosignal = "^1.3.1"
async-timeout = "^4.0.3"
attrs = "^23.2.0"
blinker = "^1.7.0"
certifi = "^2024.2.2"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
cloudpickle = "^3.0.0"
cmake = "^3.28.3"
einops = "^0.6.0"
ffmpegcv = "^0.3.10"
filelock = "^3.13.1"
Flask = "^3.0.2"
frozenlist = "^1.4.1"
fsspec = "^2024.2.0"
idna = "^3.6"
importlib_metadata = "^7.0.2"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.3"
lightning-utilities = "^0.10.1"
lit = "^17.0.6"
MarkupSafe = "^2.1.5"
mpmath = "^1.3.0"
multidict = "^6.0.5"
networkx = "^3.2.1"
numpy = "^1.25.2"
opencv-python = "^4.6.0.66"
opencv-python-headless = "^4.9.0.80"
packaging = "^23.2"
pillow = "^10.2.0"
pytorch-lightning = "^1.9.4"
PyYAML = "^6.0.1"
requests = "^2.31.0"
sympy = "^1.12"
tensordict = "^0.1.2"

# torch = "^2.0.1"
# torchinfo = "^1.7.1"
# torchmetrics = "^0.11.4"
# torchvision = "^0.15.2"
torch = "*"
torchinfo = "*"
torchmetrics = "*"
torchvision = "*"

tqdm = "^4.66.2"
triton = "^2.0.0"
typing_extensions = "^4.10.0"
urllib3 = "^2.2.1"
Werkzeug = "^3.0.1"
yarl = "^1.9.4"
zipp = "^3.17.0"
huggingface_hub = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
